# VisualSystem_V6newinsole_github

./: README.md
03data_analysis/: import numpy as np.py
Code/logs/: cal_pre.py  euler_1.txt  hs.txt  pwc_1.txt  vwc_1.txt
Code/src/IntelligentSkeleton/: .gitignore  README.md
Code/src/IntelligentSkeleton/bigai_robotic_msgs/: CMakeLists.txt  package.xml
Code/src/IntelligentSkeleton/bigai_robotic_msgs/msg/: PlaneSeg.msg  PlaneSegVec.msg  Press.msg
Code/src/IntelligentSkeleton/camera_model/: CMakeLists.txt
Code/src/IntelligentSkeleton/camera_model/src/: intrinsic_calib.cc
Code/src/IntelligentSkeleton/camera_model/src/calib/: CameraCalibration.cc
Code/src/IntelligentSkeleton/camera_model/src/chessboard/: Chessboard.cc
Code/src/IntelligentSkeleton/chessboard_detector/: CMakeLists.txt  package.xml
Code/src/IntelligentSkeleton/chessboard_detector/config/: chessboard_params.yaml
Code/src/IntelligentSkeleton/chessboard_detector/launch/: chessboard_detector.launch
Code/src/IntelligentSkeleton/chessboard_detector/scripts/: chessboard_detector.py
Code/src/IntelligentSkeleton/config/: render_rgb_cloud.rviz  vins_rviz_config.rviz
Code/src/IntelligentSkeleton/config/realsense/: realsense_lidar_config.yaml  realsense_rgbd_config.yaml  tum_rgbd_config.yaml
Code/src/IntelligentSkeleton/docs/: README.md  Scene_Graph.md
Code/src/IntelligentSkeleton/docs/Scene_Graph/: 2023_03_21.md  removed_codes.cpp
Code/src/IntelligentSkeleton/feature_tracker/: CMakeLists.txt
Code/src/IntelligentSkeleton/feature_tracker/src/: feature_tracker.cpp  feature_tracker.h  feature_tracker_node.cpp  parameters.cpp  parameters.h
Code/src/IntelligentSkeleton/pose_graph/: CMakeLists.txt
Code/src/IntelligentSkeleton/pose_graph/src/: keyframe.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
Code/src/IntelligentSkeleton/pose_graph/src/fusion/: cuda_matrix.h  cuda_utils.h  tsdf_mapper.cu  tsdf_mapper.h  utils.hpp  volume.cu  volume.h  voxel.h
Code/src/IntelligentSkeleton/vins_estimator/: CMakeLists.txt  package.xml
Code/src/IntelligentSkeleton/vins_estimator/cmake/: FindGLEW.cmake
Code/src/IntelligentSkeleton/vins_estimator/launch/: bigai_lidar.launch  bigai_rgbd.launch  render_cloud.launch  scene_graph.launch
Code/src/IntelligentSkeleton/vins_estimator/src/: -U8R.csv  111new_svm_predictions_0926-17-55-31.csv  222new_svm_predictions_0926-17-58-38.csv  22new_svm_predictions_0926-18-11-41.csv  estimator.cpp  estimator.h  estimator_node(可视化).cpp  estimator_node.cpp  estimator_node（复件，纠正了box平面数量，还没实现出楼梯预测）.cpp  estimator_node（尝试用新方法但效果失败了）.cpp  estimator_node（辖改复件）.cpp  feature_manager.cpp  feature_manager.h  new_svm_predictions_1025-19-24-35.csv  new_svm_predictions_1025-19-26-02.csv  newsvmpredictor.py  parameters.cpp  parameters.h  scaler.pkl  scene_graph_node.cpp  svm_model.pkl
Code/src/IntelligentSkeleton/vins_estimator/src/factor/: depth_factor.cpp  depth_factor.h  imu_factor.h  integration_base.h  pose_local_parameterization.cpp  pose_local_parameterization.h  projection_xyz_factor.cpp  projection_xyz_factor.h  surface_factor.cpp  surface_factor.h  vbg_factor.cpp  vbg_factor.h
Code/src/IntelligentSkeleton/vins_estimator/src/fusion/: cuda_matrix.h  cuda_utils.h  displayer.cpp  displayer.h  tsdf_mapper.cpp  tsdf_mapper.h  volume.cu  volume.h  voxel.h
Code/src/IntelligentSkeleton/vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_sfm.cpp  initial_sfm.h  solve_5pts.cpp  solve_5pts.h
Code/src/IntelligentSkeleton/vins_estimator/src/scene_graph/: TrajTracker.cpp  TrajTracker.h  main.cpp  scene_graph_config.json  utils_control.cpp  utils_control.h
Code/src/IntelligentSkeleton/vins_estimator/src/segmentation/: SurfaceExtraction.cu  SurfaceExtraction.h  utils.cpp  utils.h
Code/src/IntelligentSkeleton/vins_estimator/src/segmentation/AHC/: AHCParamSet.hpp  AHCPlaneFitter.hpp  PlaneFeature.hpp  eig33sym.hpp
Code/src/IntelligentSkeleton/vins_estimator/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  utility.cpp  utility.h  visualization.cpp  visualization.h
Driver/src/IntelligentSkeletonSensorDriver/: README.md
Driver/src/IntelligentSkeletonSensorDriver/realsense2_camera/: CHANGELOG.rst  CMakeLists.txt  package.xml
Driver/src/IntelligentSkeletonSensorDriver/realsense2_camera/config/: L515_config.json  bigai_config.json
Driver/src/IntelligentSkeletonSensorDriver/realsense2_camera/launch/: bigai.launch  rs_aligned_depth.launch  rs_aligned_depth_lidar.launch
Driver/src/IntelligentSkeletonSensorDriver/realsense2_camera/rviz/: bigai.rviz
Driver/src/IntelligentSkeletonSensorDriver/realsense2_camera/src/: base_realsense_node.cpp  imu_data.cpp  imu_data.h  insole_by_lfc.cpp  insole_by_lfc（复件）.cpp  socket_node.cpp  svmPredictor.py
