<?xml version="1.0"?>
<package format="2">
  <name>chessboard_detector</name>
  <version>1.0.0</version>
  <description>Chessboard detection package</description>
  
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>tf</depend>

  <exec_depend>python-opencv</exec_depend>
</package>
